# ocr

./: .env.example  .gitignore  COMPLETE_IMPLEMENTATION_GUIDE.md  Dockerfile  README.md  debugging_summary.md  docker-compose.yml  inference_local.py  kaggle_awq_quantization.ipynb  kaggle_inference.ipynb  pyproject.toml
app/: main.py  test_gpu.py
app/api/: errors.py  routes.py  schemas.py
app/core/: config.py  logging.py  messages.py
app/engines/: base.py  hf_impl.py  loader.py  prompts.py  vllm_impl.py
app/utils/: image.py  parsing.py
