[project]
name = "LightOnOCR-Service"
version = "0.1.0"
description = "OCR Microservice powered by LightOnOCR-2-1B"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "python-multipart",
    "pydantic>=2.0.0",
    "pydantic-settings",
    "pypdfium2",
    "python-dotenv",
    "pillow",
    # vllm is provided by the base image in Docker,
    # but listed here for local dev if on Linux/WSL
    "vllm>=0.6.0; sys_platform != 'win32'",
    "transformers>=5.0.0",
    "torch",
]

[tool.uv]
package = false
